# SQCodec

./: LICENSE  README.md  example.py  pyproject.toml
sq_codec/: __about__.py  __init__.py  codec.py  en_codec.py  layers.py  local_trans.py  modules.py  quantize.py
sq_codec/base/: config.py
sq_codec/base/nn/: __init__.py  layers.py  module.py  utils.py
sq_codec/base/utils/: __init__.py  iter.py
sq_codec/configs/: 0k75bps.toml  12kbps.toml  12kbps_24khz.toml  1k5bps.toml  24kbps_24khz.toml  3kbps.toml  6kbps.toml
sq_codec/tconv/: base.py  t_first.py  t_last.py
